Add document upload API and demo frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,24 @@
     </header>
     <main>
         <p>Welcome to the VisaMate demo interface.</p>
+        <form id="uploadForm" enctype="multipart/form-data">
+            <input type="file" name="file" required>
+            <button type="submit">Upload</button>
+        </form>
+        <p id="result"></p>
     </main>
+    <script>
+        const form = document.getElementById('uploadForm');
+        form.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const formData = new FormData(form);
+            const resp = await fetch('/documents/upload', {
+                method: 'POST',
+                body: formData
+            });
+            const data = await resp.json();
+            document.getElementById('result').textContent = `Uploaded: ${data.filename}`;
+        });
+    </script>
 </body>
 </html>
