--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,23 +16,42 @@
     </header>
     <main>
         <p>Welcome to the VisaMate demo interface.</p>
-        <form id="uploadForm" enctype="multipart/form-data">
+        <form id="uploadForm" enctype="multipart/form-data" style="margin-bottom:1rem;">
             <input type="file" name="file" required>
             <button type="submit">Upload</button>
         </form>
         <p id="result"></p>
+
+        <form id="sopForm">
+            <textarea name="profile" rows="4" cols="50" placeholder='{"name": "Asha", "program": "MBA"}' required></textarea>
+            <button type="submit">Generate SOP</button>
+        </form>
+        <pre id="sopResult"></pre>
     </main>
     <script>
-        const form = document.getElementById('uploadForm');
-        form.addEventListener('submit', async (e) => {
+        const uploadForm = document.getElementById('uploadForm');
+        uploadForm.addEventListener('submit', async (e) => {
             e.preventDefault();
-            const formData = new FormData(form);
+            const formData = new FormData(uploadForm);
             const resp = await fetch('/documents/upload', {
                 method: 'POST',
                 body: formData
             });
             const data = await resp.json();
             document.getElementById('result').textContent = `Uploaded: ${data.filename}`;
+        });
+
+        const sopForm = document.getElementById('sopForm');
+        sopForm.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const profile = JSON.parse(sopForm.profile.value);
+            const resp = await fetch('/sop/generate', {
+                method: 'POST',
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify(profile)
+            });
+            const data = await resp.json();
+            document.getElementById('sopResult').textContent = data.sop;
         });
     </script>
 </body>
